--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  # Added packages
+  firebase_auth: ^0.18.0+1
+  provider: ^3.1.0
 
 dev_dependencies:
   flutter_test:
