--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   firebase_core: ^0.5.0
   google_sign_in:
   cloud_firestore:
+  flutter_datetime_picker:
+  intl:
 
 dev_dependencies:
   flutter_test:
